--- a/escape-game/.classpath
+++ b/escape-game/.classpath
@@ -3,5 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="libs/gdx.jar" sourcepath="libs/gdx-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/xstream-1.4.6.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/Gossip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
