--- a/escape-game/.classpath
+++ b/escape-game/.classpath
@@ -4,6 +4,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="libs/gdx.jar" sourcepath="libs/gdx-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="libs/xstream-1.4.6.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/Gossip"/>
+	<classpathentry kind="lib" path="libs/MultiSplit.jar"/>
+	<classpathentry kind="lib" path="libs/xmlpull_1_0_5.jar"/>
+	<classpathentry kind="lib" path="libs/xpp3-1.1.3.3.jar"/>
+	<classpathentry kind="lib" path="libs/junit-4.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
