Modified build scripts once more

--- a/escape-game-desktop/build.xml
+++ b/escape-game-desktop/build.xml
@@ -1,89 +1,7 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!-- WARNING: Eclipse auto-generated file.
-              Any modifications will be overwritten.
-              To include a user specific buildfile here, simply create one in the same
-              directory with the processing instruction <?eclipse.ant.import?>
-              as the first entry and export the buildfile again. --><project basedir="." default="build" name="escape-game-desktop">
-    <property environment="env"/>
-    <property name="assets.link" value="../escape-game-android/assets"/>
-    <property name="ECLIPSE_HOME" value="../../../adt-bundle-linux-x86_64/eclipse"/>
-    <property name="escape-game.location" value="../escape-game"/>
-    <property name="debuglevel" value="source,lines,vars"/>
-    <property name="target" value="1.6"/>
-    <property name="source" value="1.6"/>
-    <path id="escape-game.classpath">
-        <pathelement location="${escape-game.location}/bin"/>
-        <pathelement location="${escape-game.location}/libs/gdx.jar"/>
-        <pathelement location="${escape-game.location}/libs/xstream-1.4.6.jar"/>
-        <pathelement location="${escape-game.location}/libs/MultiSplit.jar"/>
-        <pathelement location="${escape-game.location}/libs/xmlpull_1_0_5.jar"/>
-        <pathelement location="${escape-game.location}/libs/xpp3-1.1.3.3.jar"/>
-        <pathelement location="${escape-game.location}/libs/junit-4.11.jar"/>
-    </path>
-    <path id="escape-game-desktop.classpath">
-        <pathelement location="bin"/>
-        <path refid="escape-game.classpath"/>
-        <pathelement location="libs/gdx-backend-lwjgl.jar"/>
-        <pathelement location="libs/gdx-backend-lwjgl-natives.jar"/>
-        <pathelement location="libs/gdx-natives.jar"/>
-    </path>
-    <target name="init">
-        <mkdir dir="bin"/>
-        <copy includeemptydirs="false" todir="bin">
-            <fileset dir="src">
-                <exclude name="**/*.launch"/>
-                <exclude name="**/*.java"/>
-            </fileset>
-        </copy>
-        <copy includeemptydirs="false" todir="bin">
-            <fileset dir="${assets.link}">
-                <exclude name="**/*.launch"/>
-                <exclude name="**/*.java"/>
-            </fileset>
-        </copy>
-    </target>
-    <target name="clean">
-        <delete dir="bin"/>
-    </target>
-    <target depends="clean" name="cleanall">
-        <ant antfile="build.xml" dir="${escape-game.location}" inheritAll="false" target="clean"/>
-    </target>
-    <target depends="build-subprojects,build-project" name="build"/>
-    <target name="build-subprojects">
-        <ant antfile="build.xml" dir="${escape-game.location}" inheritAll="false" target="build-project">
-            <propertyset>
-                <propertyref name="build.compiler"/>
-            </propertyset>
-        </ant>
-    </target>
-    <target depends="init" name="build-project">
-        <echo message="${ant.project.name}: ${ant.file}"/>
-        <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
-            <src path="src"/>
-            <src path="${assets.link}"/>
-            <classpath refid="escape-game-desktop.classpath"/>
-        </javac>
-    </target>
-    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
-    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
-        <copy todir="${ant.library.dir}">
-            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
-        </copy>
-        <unzip dest="${ant.library.dir}">
-            <patternset includes="jdtCompilerAdapter.jar"/>
-            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
-        </unzip>
-    </target>
-    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
-        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
-        <antcall target="build"/>
-    </target>
-    <target name="Main">
-        <java classname="net.raydeejay.escapegame.Main" failonerror="true" fork="yes">
-            <classpath refid="escape-game-desktop.classpath"/>
-        </java>
-    </target>
-    <target name="jar" description="Create the JAR file" depends="build">
-    	<jar jarfile="Gossip-${DSTAMP}.jar" includes="*.class" basedir="bin"/>
-    </target>
+<?xml version="1.0" encoding="UTF-8"?>
+<project name="escape-game-desktop" default="dist">
+ 
+    <!-- Import libgdx build rules. -->
+    <import file="libgdx_rules.xml" />
+ 
 </project>
