--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 bitmap-fonts/
 svg-assets/
 
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
